apps/postfix/k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: postfix
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: postfix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postfix
    spec:
      nodeSelector:
        node-role/workload: zfs
      containers:
      - name: postfix
        image: simenduev/postfix-relay:1.4.0
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        ports:
          - containerPort: 25
            protocol: TCP
